--- a/templates/institution.html
+++ b/templates/institution.html
@@ -26,7 +26,7 @@
             </div>
             <div class="row">  <!-- 'Programme' title -->
               <div class="col-md-8">
-                <h3>Top courses at {{inst.PROVIDER_NAME.title()}}:</h3>
+                <h3>Top courses at {{inst.PROVIDER_NAME.title()}} by student feedback:</h3>
               </div>
             </div>
             <div class="row">  <!-- Programs' list -->
