v6 final fully working, less data displayed

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,10 +139,7 @@
                         +"<thead>"
                           +"<tr>"
                               +"<th class='col-md-1 text-center'>Rank</th>"
-                              +"<th class='col-md-3 text-center'>Name</th>"
-                              +"<th class='col-md-2 text-center'>Graduation rates</th>"
-                              +"<th class='col-md-2 text-center'>Salary</th>"
-                              +"<th class='col-md-2 text-center'>Teaching excellence</th>"
+                              +"<th class='col-md-3 text-center'>Institution Name</th>"
                           +"</tr>"
                         +"</thead>"
                         +"<tbody>"; 
@@ -161,10 +158,7 @@
     function new_row(rank, PROVIDER_NAME, UKPRN, title, grad_rates, salary, teaching){
       var html = "<tr>"+
                 "<td class='col-md-1 text-center'>"+rank+"</td>"+
-                "<td class='col-md-3 text-center'>"+"<a href='/institution/"+UKPRN+"'>"+PROVIDER_NAME+"<br>"+title+"</a></td>"+
-                "<td class='col-md-2 text-center'>"+grad_rates+"%"+"</td>"+
-                "<td class='col-md-2 text-center'>"+salary+"$"+"</td>"+
-                "<td class='col-md-2 text-center'>"+teaching+"%"+"</td>"+  
+                "<td class='col-md-3 text-center'>"+"<a href='/institution/"+UKPRN+"'>"+PROVIDER_NAME+"</a></td>"+
                 "</tr>";          
       return html;  
     }
@@ -188,9 +182,8 @@
                                                           json[i].PROVIDER_NAME, 
                                                           json[i].UKPRN, 
                                                           json[i].TITLE, 
-                                          /*grad rates*/  100, 
-                                              /*salary*/  json[i]['salary'][0].MED, 
-                                            /*teaching*/  json[i]['nss'][0].Q27
+                                          /*grad rates*/ /* Math.floor(json[i].graduation_rate_percent), */
+                                              /*salary*/  /*Math.floor(json[i].employment_rate_percent)*/
                                                         );
                     }
                   }
