--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li> 
                     <a href="/course/{{ course.UKPRN
-                    }}/{{course.KISCOURSEID}}">{{ course.TITLE.title() }}</a>
+                    }}/{{course.KISCOURSEID}}">{{ course.TITLE }}</a>
                     </li>
                 </ul>
 
