--- a/templates/uni-list.html
+++ b/templates/uni-list.html
@@ -11,11 +11,11 @@
 <link href="{{ url_for('static',filename='css/dataTables.bootstrap.min.css') }}" rel="stylesheet"> 
 
 <div class="starter-template" hidden>
-        <h1>List of Universities</h1>
+        <h1>list of universities</h1>
         <p class="lead">
           {#%for i in uni_list %#}
           {%for i in range(5) %}
-            <a href="/institution/{{uni_list[i].UKPRN}}">{{uni_list[i].PROVIDER_NAME}}</a></br>
+            <a href="/institution/{{uni_list[i].ukprn}}">{{uni_list[i].provider_name}}</a></br>
           {%endfor%}
         </p>
         <input type="button" value="get universities">
