--- a/templates/index.html
+++ b/templates/index.html
@@ -164,9 +164,9 @@
       var html = "<tr>"+
                 "<td class='col-md-1 text-center'>"+rank+"</td>"+
                 "<td class='col-md-3 text-center'>"+"<a href='/institution/"+UKPRN+"'>"+PROVIDER_NAME+"</a></td>"+
-                "<td class='col-md-1 text-center'>"+grad_rate+" %</td>"+
+                "<td class='col-md-1 text-center'>"+grad_rate+"</td>"+
                 "<td class='col-md-1 text-center'>"+empl_rate+" %</td>"+
-                "<td class='col-md-1 text-center'>GBP "+salary+"</td>"+
+                "<td class='col-md-1 text-center'>"+salary+"</td>"+
                 "<td class='col-md-1 text-center'>"+studfeed+" %</td>"+
                 "<td class='col-md-1 text-center'>"+points+"</td>"+
                 "</tr>";          
@@ -187,13 +187,21 @@
                   var table_rows = "";
                   for(let i = 0; i < json.length; i++){
                     if(typeof json[i].PROVIDER_NAME !== 'undefined'){
+                      var s_grad = json[i].s_grad+'%';
+                      var s_sal = 'GBP '+json[i].s_sal;
+                      if(json[i].s_grad.trim() == 'No data available.' || json[i].s_grad.trim() == 'null' ){
+                        var s_grad = 'No data available'; 
+                      }
+                      if(json[i].s_sal.trim() == 'null'){
+                        var s_sal = 'No data available'; 
+                      }
                       table_rows = table_rows + new_row(
                                                 /*rank*/  i+1, 
                                                           json[i].PROVIDER_NAME, 
                                                           json[i].UKPRN,
-                                                          json[i].s_grad,
+                                                                s_grad,
                                                           json[i].s_empl,
-                                                          json[i].s_sal,
+                                                                   s_sal,
                                                           json[i].s_feed,
                                                           json[i].points
                                           /*grad rates*/ /* Math.floor(json[i].graduation_rate_percent), */
