changed check for null #2

--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
                       if(json[i].s_grad.trim() == 'No data available.' || json[i].s_grad == null ){
                         var s_grad = 'No data available'; 
                       }
-                      if(json[i].s_sal.trim() == 'null'){
+                      if(json[i].s_sal == null){
                         var s_sal = 'No data available'; 
                       }
                       table_rows = table_rows + new_row(
