--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@
                 "<td class='col-md-1 text-center'>"+rank+"</td>"+
                 "<td class='col-md-3 text-center'>"+"<a href='/institution/"+UKPRN+"'>"+PROVIDER_NAME+"</a></td>"+
                 "<td class='col-md-1 text-center'>"+grad_rate+"</td>"+
-                "<td class='col-md-1 text-center'>"+empl_rate+" %</td>"+
+                "<td class='col-md-1 text-center'>"+empl_rate+"</td>"+
                 "<td class='col-md-1 text-center'>"+salary+"</td>"+
                 "<td class='col-md-1 text-center'>"+studfeed+" %</td>"+
                 "<td class='col-md-1 text-center'>"+points+"</td>"+
@@ -189,19 +189,23 @@
                     if(typeof json[i].PROVIDER_NAME !== 'undefined'){
                       var s_grad = json[i].s_grad+'%';
                       var s_sal = 'GBP '+json[i].s_sal;
+                      var s_empl = json[i].s_empl+'%';
                       if(json[i].s_grad == null || json[i].s_grad == 'No data available.'){
                         var s_grad = 'No data available'; 
                       }
                       if(json[i].s_sal == null){
                         var s_sal = 'No data available'; 
                       }
+                      if(json[i].s_empl == null){
+                        var s_empl = 'No data available'; 
+                      }
                       table_rows = table_rows + new_row(
                                                 /*rank*/  i+1, 
                                                           json[i].PROVIDER_NAME, 
                                                           json[i].UKPRN,
-                                                                s_grad,
-                                                          json[i].s_empl,
-                                                                   s_sal,
+                                                                 s_grad,
+                                                                 s_empl,
+                                                                  s_sal,
                                                           json[i].s_feed,
                                                           json[i].points
                                           /*grad rates*/ /* Math.floor(json[i].graduation_rate_percent), */
