--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
              <li> <a href="/">
-          <span class="glyphicon glyphicon-equalizer" style="font-size:24px;color:grey"></span> </a>  </li>  
+          <span class="glyphicon glyphicon-home" style="font-size:24px;color:grey"></span> </a>  </li>  
           <li><span class="navbar-text" style="font-size:20px;margin: 16
           px;"><u>RI</u>!</span>
          </li>
