Fixed about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
       </div>
         <p> <ul>
             <li> Almas Dossymbekov - Front End - Javascript, HTML, CSS </li> 
-            <li> Angel Millan - Database & Backend Engineer</li>
+            <li> Angel Millan - Database & Backend Developer</li>
             <li> Jim Walker - Middle End - Flask Wrangler</li>
             <li> Paolo Marangio - Usability Analysis - Project Evaluation - Web Crawler experimenter</li>
             <li> Racky - UI Designer & UX </li>
