--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
                 "<td class='col-md-1 text-center'>"+grad_rate+"</td>"+
                 "<td class='col-md-1 text-center'>"+empl_rate+"</td>"+
                 "<td class='col-md-1 text-center'>"+salary+"</td>"+
-                "<td class='col-md-1 text-center'>"+studfeed+" %</td>"+
+                "<td class='col-md-1 text-center'>"+studfeed+"</td>"+
                 "<td class='col-md-1 text-center'>"+points+"</td>"+
                 "</tr>";          
       return html;  
@@ -187,9 +187,12 @@
                   var table_rows = "";
                   for(let i = 0; i < json.length; i++){
                     if(typeof json[i].PROVIDER_NAME !== 'undefined'){
+                      
                       var s_grad = json[i].s_grad+'%';
                       var s_sal = 'GBP '+json[i].s_sal;
                       var s_empl = json[i].s_empl+'%';
+                      var s_feed = json[i].s_feed+'%';
+
                       if(json[i].s_grad == null || json[i].s_grad == 'No data available.'){
                         var s_grad = 'No data available'; 
                       }
@@ -199,6 +202,9 @@
                       if(json[i].s_empl == null){
                         var s_empl = 'No data available'; 
                       }
+                      if(json[i].s_feed == null){
+                        var s_feed = 'No data available'; 
+                      }
                       table_rows = table_rows + new_row(
                                                 /*rank*/  i+1, 
                                                           json[i].PROVIDER_NAME, 
@@ -206,7 +212,7 @@
                                                                  s_grad,
                                                                  s_empl,
                                                                   s_sal,
-                                                          json[i].s_feed,
+                                                                 s_feed,
                                                           json[i].points
                                           /*grad rates*/ /* Math.floor(json[i].graduation_rate_percent), */
                                               /*salary*/  /*Math.floor(json[i].employment_rate_percent)*/
