--- a/templates/course.html
+++ b/templates/course.html
@@ -31,7 +31,7 @@
             </h3>
         </div>
         <div class="btn-group btn-group-justified">
-            <a href="{{course.CRSEURL}}" class="btn btn-primary">Program Page</a>
+            <a href="{{course.CRSEURL}}" class="btn btn-primary">Programme Page</a>
             <a href="{{course.ASSURL}}" class="btn btn-primary">Assessment</a>
             <a href="{{course.EMPLOYURL}}" class="btn btn-primary">Employment Opportunities</a>
             <a href="{{course.SUPPORTURL}}" class="btn btn-primary">Financing</a>
