fix typo institution page link to course page

--- a/templates/institution.html
+++ b/templates/institution.html
@@ -80,7 +80,7 @@
                   
                     {%for c in all_courses %}
                         <tr>
-                            <td class="col-md-3 text-center"><a href="/courses/{{inst.UKPRN}}/{{c.KISCOURSEID}}">{{c.TITLE}}</a></br></td>
+                            <td class="col-md-3 text-center"><a href="/course/{{inst.UKPRN}}/{{c.KISCOURSEID}}">{{c.TITLE}}</a></br></td>
                             <td class="col-md-3 text-center">{{c.graduation_rate_percent}}</br></td>
                             <td class="col-md-3 text-center">{{c.employment_rate_percent}}</br></td>
                             <td class="col-md-3 text-center">{{c.median_salary}}</br></td>
