search to filter

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
           </ul>
            <form class="navbar-form navbar-right" action="/search" method="get">
             <div class="form-group input-group" style="margin: 3px;">
-            <input style="width:70%" type="text" class="form-control" name="searchInput" id="searchbar" placeholder="type here ...">
+            <input style="width:70%" type="text" class="form-control" name="searchInput" id="searchbar" placeholder=" ">
             <button style="width:30%; border-color:black; background-color:black" type="submit" class="btn btn-primary">Search</button>
         </div><!--/.nav-collapse -->
         </form>
