--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
       <div class="starter-template">
         <h1>About</h1>
-        <p class="lead"> This website was made by group 6 </p>
+        <p class="lead"> This website was made by Group 6 </p>
       </div>
         <p> <ul>
             <li> Almas Dossymbekov - Front End - Javascript, HTML, CSS </li> 
