--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
           <label id="sliderval3"></label>        
       </div>
       <div class="form-group col-md-3">
-          <label>Teaching excellence</label>
+          <label>Student Satisfaction</label>
           <input name='teaching' type="range" min="1" max="100" value="50" class="slider" id="teachingExcellenceRange">
           <label id="sliderval4"></label>        
       </div>
