--- a/templates/about.html
+++ b/templates/about.html
@@ -12,4 +12,5 @@
             <li> Paolo Marangio - Usability Analysis - Project Evaluation - Web Crawler experimenter</li>
             <li> Racky - UI Designer & UX </li>
         </ul></p>
-{% endblock %}
+	<p>The Unistats Dataset is reproduced with the permission of the Office for Students (OfS), the Higher Education Statistics Agency (HESA) and their licensors. The Unistats Dataset may be accessed in its original form here: www.hesa.ac.uk/support/tools-and-downloads/unistats.  All copyright and other intellectual property rights in the Unistats Dataset are owned by OfS, HESA and their licensors.</p>
+	{% endblock %}
