--- a/templates/about.html
+++ b/templates/about.html
@@ -14,5 +14,7 @@
         </ul></p>
     <div class="starter-template">
 	<p>The Unistats Dataset is reproduced with the permission of the Office for Students (OfS), the Higher Education Statistics Agency (HESA) and their licensors. The Unistats Dataset may be accessed in its original form here: www.hesa.ac.uk/support/tools-and-downloads/unistats.  All copyright and other intellectual property rights in the Unistats Dataset are owned by OfS, HESA and their licensors.</p>
+    <p>
+        This website is a prototype for part II of the Software Development coursework. Do not rely on the validity of the data displayed herein, use at your own risk.
     <div>
 	{% endblock %}
