--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
             <li> Angel Millan - Database & Backend Developer</li>
             <li> Jim Walker - Middle End - Flask Wrangler</li>
             <li> Paolo Marangio - Usability Analysis - Project Evaluation - Web Crawler experimenter</li>
-            <li> Racky - UI Designer & UX </li>
+            <li> Zhao Yue - UI Designer & UX </li>
         </ul></p>
     <div class="starter-template">
 	<p>The Unistats Dataset is reproduced with the permission of the Office for Students (OfS), the Higher Education Statistics Agency (HESA) and their licensors. The Unistats Dataset may be accessed in its original form here: www.hesa.ac.uk/support/tools-and-downloads/unistats.  All copyright and other intellectual property rights in the Unistats Dataset are owned by OfS, HESA and their licensors.</p>
