--- a/templates/institution.html
+++ b/templates/institution.html
@@ -21,6 +21,10 @@
             </div>
             <div class="row imageCenterAlign topAlign">  <!-- about and logo -->
               <div class="col-md-6 equal center-block image-center">
+                {%if wiki%}
+                  <p><i>From Wikipedia:</i></p>
+                {%endif%}
+                
                 <p style="font-family:sans-serif; font-size: 18px"><br>{{wiki.summary}}<a href={{wiki.url}}> ...</a></p>
                 </initrd.imgv>
               </div>
